--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@ai-sdk/openai": "^3.0.25",
     "ai": "^6.0.67",
     "convex": "^1.31.7",
+    "html2canvas": "^1.4.1",
     "lucide-react": "^0.563.0",
     "next": "16.1.6",
     "react": "19.2.3",
