--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   },
   "dependencies": {
     "@ai-sdk/openai": "^3.0.25",
+    "@clerk/nextjs": "^6.20.3",
     "@sparticuz/chromium": "^143.0.4",
-    "ai": "^6.0.67",
+    "ai": "^6.0.79",
+    "canvas-confetti": "^1.9.4",
     "convex": "^1.31.7",
     "framer-motion": "^12.33.0",
     "html2canvas": "^1.4.1",
@@ -24,12 +26,14 @@
     "react-dom": "19.2.3",
     "react-dropzone": "^14.4.0",
     "sharp": "^0.34.5",
+    "stripe": "^20.3.1",
     "zod": "^4.3.6"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.2",
+    "@types/canvas-confetti": "^1.9.0",
     "@types/jest": "^30.0.0",
     "@types/node": "^20",
     "@types/react": "^19",
