--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "convex": "^1.31.7",
     "framer-motion": "^12.33.0",
     "html2canvas": "^1.4.1",
+    "lightningcss-darwin-x64": "1.30.2",
     "lucide-react": "^0.563.0",
     "next": "16.1.6",
     "puppeteer-core": "^24.37.2",
