add reel video generation feature

--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "@ai-sdk/google": "^3.0.26",
     "@clerk/elements": "^0.24.7",
     "@clerk/nextjs": "^6.20.3",
+    "@remotion/cli": "^4.0.428",
+    "@remotion/lambda": "^4.0.428",
+    "@remotion/lambda-client": "^4.0.428",
     "@sparticuz/chromium": "^143.0.4",
     "@stripe/react-stripe-js": "^5.6.0",
     "@stripe/stripe-js": "^8.7.0",
@@ -30,6 +33,7 @@
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-dropzone": "^14.4.0",
+    "remotion": "^4.0.428",
     "resend": "^6.9.2",
     "sharp": "^0.34.5",
     "stripe": "^20.3.1",
