--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "remotion": "^4.0.428",
     "resend": "^6.9.2",
     "sharp": "^0.34.5",
+    "sonner": "^2.0.7",
     "stripe": "^20.3.1",
     "swr": "^2.4.0",
     "zod": "^4.3.6"
